# sti-hub-api

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
src/community-engagement/: .gitignore  alembic.ini  community.db  pyproject.toml
src/community-engagement/alembic/: env.py
src/community-engagement/alembic/versions/: c6d401753dc1_initial_migration.py
src/community-engagement/app/: main.py
src/community-engagement/app/api/auth/: routes.py  schemas.py
src/community-engagement/app/api/forum/: routes.py  schemas.py
src/community-engagement/app/core/: auth.py  config.py  database.py  security.py
src/community-engagement/app/models/: forum.py  user.py
src/project-management/: .env.example  README.md  package-lock.json  package.json
src/project-management/config/: database.js  redis.js
src/project-management/controllers/: analytics.controller.js  project.controller.js
src/project-management/models/: Analytics.js  Project.js
src/project-management/utils/: analytics.util.js  project.util.js
src/project-management/validators/: analytics.validators.js  project.validators.js
src/resource-sharing/: .gitignore  README.md  package.json
src/resource-sharing/config/: ioredis.js  userServiceClient.js
src/resource-sharing/controllers/: department.controller.js  grant.application.controller.js  grant.controller.js  profile.controller.js  research.controller.js
src/resource-sharing/models/: Grant.js  GrantApplication.js  ResearchPublication.js
src/resource-sharing/utils/: grant.application.util.js  grant.util.js  (+2 more)
src/user-registration/: README.md
(+140 files in other folders)
