[project]
name = "community-engagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "python-jose>=3.3.0",
    "sqlmodel>=0.0.22",
]
